// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarGroup renders correctly renders correctly with counter 1`] = `
<div
  className="avatarGroupContainer"
>
  <div
    className="avatar large avatarContainer"
    data-testid="avatar"
    style={{}}
  >
    <div
      className="clickable clickableWrapper disableTextSelection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex={-1}
    >
      <div
        aria-hidden={false}
        className="circle circleText"
        style={
          {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          className="contentText contentTextLarge"
          data-testid="avatar-content"
        >
          P1
        </span>
      </div>
    </div>
  </div>
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={-1}
  />
  <div
    className="counterContainer medium light"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <span
      aria-label="Tab for more items 1"
      aria-labelledby=""
      onMouseDown={[Function]}
    >
      <div
        aria-label="1"
        className="counter sizeLarge kindFill colorLight"
      >
        <span
          data-testid="counter"
          id="counter"
        >
          +1
        </span>
      </div>
    </span>
    <div
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`AvatarGroup renders correctly renders correctly with counter ariaLabel default-tooltip 1`] = `
<div
  className="avatarGroupContainer"
>
  <div
    className="avatar large avatarContainer"
    data-testid="avatar"
    style={{}}
  >
    <div
      className="clickable clickableWrapper disableTextSelection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex={-1}
    >
      <div
        aria-hidden={false}
        className="circle circleText"
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          aria-label="Person 1"
          className="contentText contentTextLarge"
          data-testid="avatar-content"
        >
          P1
        </span>
      </div>
    </div>
  </div>
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={-1}
  />
  <div
    className="counterContainer medium light"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <span
      aria-label="Tab for more items 1"
      aria-labelledby=""
      onMouseDown={[Function]}
    >
      <div
        aria-label="1"
        className="counter sizeLarge kindFill colorLight"
      >
        <span
          data-testid="counter"
          id="counter"
        >
          +1
        </span>
      </div>
    </span>
    <div
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`AvatarGroup renders correctly renders correctly with counter default-tooltip 1`] = `
<div
  className="avatarGroupContainer"
>
  <div
    className="avatar large avatarContainer"
    data-testid="avatar"
    style={{}}
  >
    <div
      className="clickable clickableWrapper disableTextSelection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex={-1}
    >
      <div
        aria-hidden={false}
        className="circle circleText"
        onBlur={[Function]}
        onClick={[Function]}
        onContextMenu={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          className="contentText contentTextLarge"
          data-testid="avatar-content"
        >
          P1
        </span>
      </div>
    </div>
  </div>
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={-1}
  />
  <div
    className="counterContainer medium light"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <span
      aria-label="Tab for more items 1"
      aria-labelledby=""
      onMouseDown={[Function]}
    >
      <div
        aria-label="1"
        className="counter sizeLarge kindFill colorLight"
      >
        <span
          data-testid="counter"
          id="counter"
        >
          +1
        </span>
      </div>
    </span>
    <div
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`AvatarGroup renders correctly renders correctly with custom counter tooltip 1`] = `
<div
  className="avatarGroupContainer"
>
  <div
    className="avatar large avatarContainer"
    data-testid="avatar"
    style={{}}
  >
    <div
      className="clickable clickableWrapper disableTextSelection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex={-1}
    >
      <div
        aria-hidden={false}
        className="circle circleText"
        style={
          {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          className="contentText contentTextLarge"
          data-testid="avatar-content"
        >
          P1
        </span>
      </div>
    </div>
  </div>
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={-1}
  />
  <div
    className="counterContainer medium light"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <span
      aria-label="Tab for more items 1"
      aria-labelledby=""
      onMouseDown={[Function]}
    >
      <div
        aria-label="1"
        className="counter sizeLarge kindFill colorLight"
      >
        <span
          data-testid="counter"
          id="counter"
        >
          +1
        </span>
      </div>
    </span>
    <div
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`AvatarGroup renders correctly renders correctly with custom counter value 1`] = `
<div
  className="avatarGroupContainer"
>
  <div
    className="avatar large avatarContainer"
    data-testid="avatar"
    style={{}}
  >
    <div
      className="clickable clickableWrapper disableTextSelection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex={-1}
    >
      <div
        aria-hidden={false}
        className="circle circleText"
        style={
          {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          className="contentText contentTextLarge"
          data-testid="avatar-content"
        >
          P1
        </span>
      </div>
    </div>
  </div>
  <div
    className="avatar large avatarContainer"
    data-testid="avatar"
    style={{}}
  >
    <div
      className="clickable clickableWrapper disableTextSelection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex={-1}
    >
      <div
        aria-hidden={false}
        className="circle circleText"
        style={
          {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          className="contentText contentTextLarge"
          data-testid="avatar-content"
        >
          P2
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AvatarGroup renders correctly renders correctly with dummy class name 1`] = `
<div
  className="avatarGroupContainer dummy-class-name"
>
  <div
    className="avatar large avatarContainer"
    data-testid="avatar"
    style={{}}
  >
    <div
      className="clickable clickableWrapper disableTextSelection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex={-1}
    >
      <div
        aria-hidden={false}
        className="circle circleText"
        style={
          {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          className="contentText contentTextLarge"
          data-testid="avatar-content"
        >
          P1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AvatarGroup renders correctly renders correctly with large size 1`] = `
<div
  className="avatarGroupContainer"
>
  <div
    className="avatar large avatarContainer"
    data-testid="avatar"
    style={{}}
  >
    <div
      className="clickable clickableWrapper disableTextSelection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex={-1}
    >
      <div
        aria-hidden={false}
        className="circle circleText"
        style={
          {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          className="contentText contentTextLarge"
          data-testid="avatar-content"
        >
          P1
        </span>
      </div>
    </div>
  </div>
  <div
    className=""
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={-1}
  />
  <div
    className="counterContainer large light"
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex={0}
  >
    <span
      aria-label="Tab for more items 1"
      aria-labelledby=""
      onMouseDown={[Function]}
    >
      <div
        aria-label="1"
        className="counter sizeLarge kindFill colorLight"
      >
        <span
          data-testid="counter"
          id="counter"
        >
          +1
        </span>
      </div>
    </span>
    <div
      tabIndex={-1}
    />
  </div>
</div>
`;

exports[`AvatarGroup renders correctly renders correctly without counter 1`] = `
<div
  className="avatarGroupContainer"
>
  <div
    className="avatar large avatarContainer"
    data-testid="avatar"
    style={{}}
  >
    <div
      className="clickable clickableWrapper disableTextSelection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex={-1}
    >
      <div
        aria-hidden={false}
        className="circle circleText"
        style={
          {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          className="contentText contentTextLarge"
          data-testid="avatar-content"
        >
          P1
        </span>
      </div>
    </div>
  </div>
  <div
    className="avatar large avatarContainer"
    data-testid="avatar"
    style={{}}
  >
    <div
      className="clickable clickableWrapper disableTextSelection"
      data-testid="clickable"
      onClick={[Function]}
      onKeyDown={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      role="button"
      tabIndex={-1}
    >
      <div
        aria-hidden={false}
        className="circle circleText"
        style={
          {
            "backgroundColor": "var(--color-chili-blue)",
          }
        }
        tabIndex={0}
      >
        <span
          className="contentText contentTextLarge"
          data-testid="avatar-content"
        >
          P2
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AvatarGroup renders correctly with empty props 1`] = `null`;
